2009-05-02  Gustavo Noronha Silva  <gns@gnome.org>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=25466
        WebKitGtk+ 1.1.6 prints weird error messages in Liferea

        Use strlen instead of g_utf8_strlen when calculating the size of
        the data that is being given to webkit_web_frame_load_string to be
        loaded, so that we don't miss any of the content.

        * webkit/webkitwebframe.cpp:

Canonical link: https://commits.webkit.org/35181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43146 268f45cc-cd09-0410-ab3c-d52691b4dbfc