WebKit/gtk/webkit/webkitwebframe.cpp
@@ -416,7 +416,7 @@ static void webkit_web_frame_load_data(WebKitWebFrame* frame, const gchar* conte
 
     ResourceRequest request(baseKURL);
 
-    RefPtr<SharedBuffer> sharedBuffer = SharedBuffer::create(content, g_utf8_strlen(content, -1));
+    RefPtr<SharedBuffer> sharedBuffer = SharedBuffer::create(content, strlen(content));
     SubstituteData substituteData(sharedBuffer.release(),
                                   mimeType ? String::fromUTF8(mimeType) : String::fromUTF8("text/html"),
                                   encoding ? String::fromUTF8(encoding) : String::fromUTF8("UTF-8"),
